@@ -2,6 +2,9 @@ libdebian-installer (0.60) UNRELEASED; urgency=low
 
   * Remove incorrect unused attribute from di_packages_parser_read_name's
     user_data parameter.
+  * Appease the combination of _FORTIFY_SOURCE=2 (used by default on Ubuntu)
+    and -Werror. Why exactly glibc demands that fwrite be checked but not
+    fputs is beyond me.
 
  -- Colin Watson <cjwatson@debian.org>  Mon, 01 Sep 2008 23:50:02 +0100
 
